# fconline

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  ENV_SETUP.md  Makefile  README.md  WARP.md  build.bat  build.sh  build.spec  build_onedir.spec  cli.py  cliff.toml  gist.example.json  gist.json.example  manage.py  pyproject.toml  setup.iss  version_info.txt
.github/: pull_request_template.md
.github/workflows/: build-release.yml  ci.yml  pr-build-test.yml
app/: main.py
app/core/: async_typer.py  auto_props.py  settings.py
app/core/managers/: config.py  crypto.py  file.py  local_config.py  notifier.py  platform.py  request.py  update.py  version.py
app/core/mixins/: async_init.py
app/core/providers/: configs.py  factory.py
app/infrastructure/: logging.py
app/infrastructure/clients/: github.py  main.py  main_client.py
app/main/cli/: app.py  factory.py
app/main/ui/: app.py  factory.py  native.py
app/schemas/: app_config.py  app_status.py  billboard.py  configs.py  local_config.py  spin_response.py  user_response.py
app/schemas/enums/: account_tag.py  message_tag.py  payment_type.py
app/services/: main.py  main_service.py
app/services/handlers/: login.py  login_handler.py  websocket.py  websocket_handler.py
app/ui/components/: account_dialog.py  accounts_tab.py  activity_log_tab.py  notification_dialog.py  notification_icon.py  update_dialog.py
app/ui/handlers/: account.py  account_handler.py  base.py  base_handler.py  update.py  update_handler.py
app/ui/utils/: ui_factory.py  ui_helpers.py
app/ui/windows/: main.py  main_window.py
app/utils/: concurrency.py  constants.py  helpers.py  sounds.py
app/utils/decorators/: singleton.py
app/utils/types/: callback.py
scripts/: generate_license.py  setup-env.py  validate-secrets.py
src/: auto_reload.py  client.py  gui.py  logger.py  main.py  models.py  tool.py  types.py  utils.py
src/core/: __init__.py  auto_spin.py  browser_manager.py  event_config.py  fc_automation.py  fc_automation.py.backup  login_handler.py  main_tool.py  user_info_manager.py  websocket_handler.py  websocket_monitor.py
src/core/configs/: __init__.py  settings.py
src/core/managers/: config.py  config_manager.py  file.py  file_manager.py  notifier.py  platform.py  request.py  request_manager.py  update.py
src/core/providers/: configs.py  factory.py
src/gui/: __init__.py  accounts_tab.py  activity_log_tab.py  base_component.py  control_panel.py  event_tab.py  fco.py  header.py  log_panel.py  main_window.py  main_window.py.backup  notification_icon.py  styles.py  update_dialog.py  user_info_panel.py  user_settings_panel.py  user_settings_tab.py
src/gui/components/: __init__.py  activity_log_tab.py  event_tab.py  notification_icon.py
src/infrastructure/: __init__.py  auto_reload.py  client.py  logger.py  logging.py
src/infrastructure/clients/: fco.py  fconline_api.py  main_client.py
src/schemas/: __init__.py  configs.py  reload_response.py  spin.py  spin_response.py  user.py  user_config.py  user_response.py
src/schemas/enums/: account_tag.py  message_tag.py
src/services/: configs.py  fco.py  files.py  jackpot_history.py  login_handler.py  main_service.py  main_tool.py  platforms.py  requests.py  websocket_handler.py
src/services/fco/: login_handler.py  main_tool.py  websocket_handler.py
src/utils/: __init__.py  configs.py  contants.py  credentials.py  files.py  helpers.py  methods.py  platform.py  platforms.py  requests.py  sounds.py  user_config.py
src/utils/types/: callback.py  (+1 more)
(+14 files in other folders)
