[project]
name = "src"
version = "1.0.0"
description = "FC Online Automation Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "browser-use>=0.5.11",
    "cryptography>=45.0.6",
    "darkdetect>=0.8.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "shortuuid>=1.0.13",
    "sv-ttk>=2.6.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1,<3",
    "black>=25.1.0,<26",
    "deptry>=0.23.0,<0.24",
    "flake8>=7.2.0,<8",
    "icecream>=2.1.5",
    "isort>=6.0.1,<7",
    "mypy>=1.15.0,<2",
    "pre-commit==4.2.0",
    "pyinstaller>=6.15.0",
    "pytest-asyncio>=0.23.7,<0.24",
    "pytest-cov>=5.0.0,<6",
    "pytest>=8.2.3,<9",
    "ruff>=0.11.8,<0.12",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
fconline = "manage:main"
fconline-cli = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py312']
